--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
   <script>
-    const socket = io("http://localhost:3000")
+    const socket = io("https://whats-app-clone-40jh.onrender.com")
     const usernameInput = document.getElementById("username")
     const loginBtn = document.getElementById("loginbtn")
     const authSection = document.getElementById("authsection")
